--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   my_new_project:
-    # Applies to all files under models/example/
-    example:
+    dbt_to_lightdash:
       +materialized: table
+      +schema: dbt_to_lightdash  # 既存のスキーマ
+
+    transform:
+      +materialized: table
+      +schema: dbt_to_lightdash  # 既存のスキーマ
