--- a/.github/workflows/deploy-lightdash.yml
+++ b/.github/workflows/deploy-lightdash.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install dbt
         run: |
-          pip install dbt-core==$DBT_VERSION dbt-postgres==$DBT_VERSION dbt-redshift==$DBT_VERSION dbt-snowflake==$DBT_VERSION dbt-bigquery==$DBT_VERSION
+          pip install dbt-core==$DBT_VERSION dbt-bigquery==$DBT_VERSION
           dbt deps --project-dir "$PROJECT_DIR"
 
       - name: Install lightdash CLI
