--- a/.github/workflows/deploy-lightdash.yml
+++ b/.github/workflows/deploy-lightdash.yml
@@ -61,6 +61,5 @@ jobs:
           LIGHTDASH_API_KEY: ${{ secrets.LIGHTDASH_API_KEY }}          
           LIGHTDASH_PROJECT: ${{ secrets.LIGHTDASH_PROJECT }}          
           LIGHTDASH_URL: ${{ secrets.LIGHTDASH_URL }}      
-          GOOGLE_APPLICATION_CREDENTIALS: '/tmp/googlecredentials.json'    
-
+          GOOGLE_APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         run: lightdash deploy --project-dir "$PROJECT_DIR" --profiles-dir . --profile prod || lightdash deploy --project-dir "$PROJECT_DIR" --profiles-dir .
